--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ crate-type = ["cdylib"]
 hashbrown = "0.11"
 once_cell = "1"
 pyo3 = { version = "0.15", features = ["extension-module"] }
-egg = { git = "https://github.com/oflatt/egg.git", branch = "separate-union-intersection" }
+egg = { git = "https://github.com/egraphs-good/egg.git", commit = "b30c8c0c1cd31863526e19745629bf05e2dbae87" }
